--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 server.port=2424
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://DB-container:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=0000
 #spring.jpa.hibernate.ddl-auto=create-drop
