--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   backend:
-    image: chetouiiftikhar/springimgf:latest  # Use a fixed tag or version
+    image: chetouiiftikhar/springimgf:${name}  # Use a fixed tag or version
     container_name: backend-container
     restart: always
     networks:
@@ -32,7 +32,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: 0000
 
   frontend:
-    image: chetouiiftikhar/frontangimagef:latest  # Use a fixed tag or version
+    image: chetouiiftikhar/frontangimagef:${name}  # Use a fixed tag or version
     container_name: frontend-container
     restart: always
     networks:
