--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   backend:
-    image: chetouiiftikhar/springimgf:${BUILD_ID}
+    image: chetouiiftikhar/springimgf
     container_name: backend-container
     restart: always
     networks:
@@ -32,7 +32,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: 0000
 
   frontend:
-    image: chetouiiftikhar/frontangimagef:${BUILD_ID}
+    image: chetouiiftikhar/frontangimagef
     container_name: frontend-container
     restart: always
     networks:
